--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:android:preview": "eas build --platform android --profile preview"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
