--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,34 @@ lerna-debug.log*
 .DS_Store
 .vercel
 
+
+
+
+
+
+# web ----------
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
