--- a/admin-web/package.json
+++ b/admin-web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/charts": "^8.3.13",
     "@mantine/core": "^8.3.13",
     "@mantine/hooks": "^8.3.13",
     "@mantine/modals": "^8.3.13",
@@ -22,6 +23,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
